Fixed positioning of trash and info buttons on mobile landscape orientation

--- a/client/src/pages/Home/style.css
+++ b/client/src/pages/Home/style.css
@@ -144,8 +144,12 @@ button {
         font-size:15px;
     }
 
-    #info {
+    #trash {
         top: 55px;
+    }
+    
+    #info {
+        bottom:0px;
     }
 
     #total {
